minor fixes to make it playable on mobile

--- a/src/CardHolder.css
+++ b/src/CardHolder.css
@@ -1,4 +1,12 @@
 .CardHolderContainer{
     display:flex;
     justify-content: center;
+
+}
+
+@media screen and (max-width: 1400px) {
+  .CardHolderContainer {
+    overflow-x: scroll;
+    justify-content: flex-start;
+  }
 }
