--- a/src/Deck.css
+++ b/src/Deck.css
@@ -4,3 +4,9 @@
   transform: translateY(-50%);
   left: 50px;
 }
+
+@media screen and (max-width: 1400px) {
+  .deckClass {
+    left: -116px;
+  }
+}
