--- a/src/PlayedCards.css
+++ b/src/PlayedCards.css
@@ -1,5 +1,5 @@
 .PlayedCardsDiv {
-    position :absolute;
+    /*position :absolute;*/
     top: 50%;
     /*right:50%;*/
     width: 100%;
